Fix few layout issues

--- a/wegas-app/src/main/webapp/wegas-editor/css/wegas-editor.css
+++ b/wegas-app/src/main/webapp/wegas-editor/css/wegas-editor.css
@@ -418,7 +418,7 @@ body, button, .yui3-skin-sam .yui3-datatable-table {
 #rightTabView .wegas-jointeam .teamselection {
     background: #f6f6f6;
     padding-bottom: 10px;
-    padding-left: 5px;
+    padding-left: 0.6em;
 }
 #rightTabView .wegas-jointeam .teamselection:empty {
     background: white;
